--- a/index.html
+++ b/index.html
@@ -1,18 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza_Palace</title>
 </head>
 <body>
-    <div class="container">
-        <div class="context">
-            <h1>PIZZA PALACE</h1>
+    <div class="flow">
+        <div id="myHeader">
+            <h1>Pizza Palace</h1> 
+        </div>   
+      <div class="fluid">
+        <div class="figure-caption">
+          <p> Welcome</p>
+          <p> To</p><p> The Pizza Palace </p>
         </div>
     </div>
-   <p> Welcome to the Pizza_Palace </p>
-   <h1>MENU</h1>
+    <P>YOUR  SATISFACTION ,<P>
+    <P> IS  OUR CONCERN !!!</P>
+       <div class="description">
+         <h2>ABOUT US</h2>
+         <p>We provide exceptional services ,at our establishment your pizza is always  assured</p>
+         <p>of quality and freshness
+         </p>
+         <p>Also you can benefit with our HAPPY HOURS! and</p>
+         <p>INSANE DEALS!!!</p>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <img src="images/pizza2.jpg" alt="pizza1"
+            stle="width:100%;">
+          </div>
+          <div class="col-6">
+            <img src="images/pizza3.jpeg" alt="pizza2"
+            stle="width:100%;">
+          </div>
+            <h3>This are examles of some our toppings</h3>
+          </div>
+         <div class="row">
+          <div class="variety">
+            <div class="small">
+            <img src="images/small_pizza.jpg" alt="small" stle="width:100%;">
+          </div>
+          <br>
+          <br>
+
+           <div class="medium">
+              <img src="images/medium_pizza.png" alt="medium"
+              stle="width:100%;"> 
+           </div>
+           <br>
+           <br>
+           <div class="large">
+            <img src="images/large_pizza.jpg" alt="large"
+            stle="width:100%;">
+           </div>
+          </div>
+          </div>
+          <br>
+          <br>
+          <div class="info ss">
+            <button type="menu" onclick="menus">MENU</button>
+          </div>
+        </div>
+    </div>
+    </div>
+</body>
+<script type="text/javascript" src="js/jquery-3.4.1.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </html>
