--- a/index.html
+++ b/index.html
@@ -42,26 +42,97 @@
           <h2>CRAZZY DEALSS</h2>
           <div class="menu-container">
             <div class="menu-item">
+              <label for="cars">Choose the size</label>
+              <select id="cars" name="carlist" form="carform">
+                <option value="small">Small=1000</option>
+                <option value="medium">Medium=1200</option>
+                <option value="large">Large=1300</option>
+              </select>
               <img src="images/delivery.jpg" />
-              <div class="image-caption"  >Hawain-pizza  PRICE=1400 <button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              <div class="image-caption"  >Hawain-pizza  Delivery=350 <button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              
 
             </div>
 
             <div class="menu-item">
+              <label for="cars">Choose the size</label>
+              <select id="cars" name="carlist" form="carform">
+                <option value="small">Small=900</option>
+                <option value="medium">Medium=1000</option>
+                <option value="large">Large1500</option>
+              </select>
               <img src="images/download.jpeg" />
-              <div class="image-caption"  >Neapolitian-pizza  PRICE=1250 <button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              <div class="image-caption"  >Greek-pizza Delivery=150 <button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
 
             </div>
             <div class="menu-item">
+              <label for="cars">Choose the size</label>
+              <select id="cars" name="carlist" form="carform">
+                <option value="small">Small=800</option>
+                <option value="medium">Medium=1150</option>
+                <option value="large">Large=1450</option>
+              </select>
               <img src="images/pizza3.jpeg" /> 
-              <div class="image-caption"  >Sicilian-pizza PRICE=1300 <button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              <div class="image-caption"  >secilian-pizza Delivery=200 <button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
 
             </div>
             <div class="menu-item">
+              <label for="cars">Choose the size</label>
+              <select id="cars" name="carlist" form="carform">
+                <option value="small">Small=850</option>
+                <option value="medium">Medium=100</option>
+                <option value="large">Large=1350</option>
+              </select>
               <img src="images/patterns.jpeg" />
-              <div class="image-caption"  >Greek-pizza  PRICE=1200<button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              <div class="image-caption"  >Paprica-pizza Delivery=250<button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
 
             </div>
+            <div class="menu-item">
+              <label for="cars">Choose the size</label>
+              <select id="cars" name="carlist" form="carform">
+                <option value="small">Small=800</option>
+                <option value="medium">Medium=1150</option>
+                <option value="large">Large=1450</option>
+              </select>
+              <img src="images/small_pizza.jpg" />
+              <div class="image-caption"  >Galilain-pizza Delivery=250<button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+
+            </div>
+            <div class="menu-item">
+              <label for="cars">Choose the size</label>
+              <select id="cars" name="carlist" form="carform">
+                <option value="small">Small=800</option>
+                <option value="medium">Medium=1150</option>
+                <option value="large">Large=1450</option>
+              </select>
+              <img src="images/medium_pizza.png" />
+              <div class="image-caption"  >Chelo-pizza Delivery=250<button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+
+            </div>
+
+            <div class="menu-item">
+              <label for="cars">Choose the size</label>
+              <select id="cars" name="carlist" form="carform">
+                <option value="small">Small=750</option>
+                <option value="medium">Medium=1000</option>
+                <option value="large">Large=1300</option>
+              </select>
+              <img src="images/pizza2.jpg" />
+              <div class="image-caption"  >Deluxe-pizza Delivery=300<button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+
+            </div>
+            <div class="menu-item">
+              <label for="cars">Choose the size</label>
+              <select id="cars" name="carlist" form="carform">
+                <option value="small">Small=800</option>
+                <option value="medium">Medium=1100</option>
+                <option value="large">Large=1400</option>
+              </select>
+              <img src="images/patterns.jpeg" />
+              <div class="image-caption"  >Macho-pizza Delivery=350<button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+
+            </div>
+
           </div><!-- menu container close-->
     </div>
     
