--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <option value="large">Large=1300</option>
               </select>
               <img src="images/delivery.jpg" />
-              <div class="image-caption"  >Hawain-pizza  Delivery=350 <button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              <div class="image-caption"  >Hawain-pizza  Delivery=350 <button type="button" class="btn btn-warning btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
               
 
             </div>
@@ -73,7 +73,7 @@
                 <option value="large">Large=1450</option>
               </select>
               <img src="images/pizza3.jpeg" /> 
-              <div class="image-caption"  >secilian-pizza Delivery=200 <button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              <div class="image-caption"  >secilian-pizza Delivery=200 <button type="button" class="btn btn-danger btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
 
             </div>
             <div class="menu-item">
@@ -84,7 +84,7 @@
                 <option value="large">Large=1350</option>
               </select>
               <img src="images/patterns.jpeg" />
-              <div class="image-caption"  >Paprica-pizza Delivery=250<button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              <div class="image-caption"  >Paprica-pizza Delivery=250<button type="button" class="btn btn-primary btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
 
             </div>
             <div class="menu-item">
@@ -118,7 +118,7 @@
                 <option value="large">Large=1300</option>
               </select>
               <img src="images/pizza2.jpg" />
-              <div class="image-caption"  >Deluxe-pizza Delivery=300<button type="button" class="btn btn-info btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
+              <div class="image-caption"  >Deluxe-pizza Delivery=300<button type="button" class="btn btn-success btn-lg modalTrigger" data-toggle="modal" data-target="#myModal">Order Now</button></div>
 
             </div>
             <div class="menu-item">
