--- a/index.html
+++ b/index.html
@@ -121,13 +121,23 @@
         <input type="number" value="1" class="form-control" id="number_pizza">
       </div>
 
-      <div class="form-group">
+      <div class="form-group"> 
         <label for="size">Size</label>
         <select class="form-control" id="size" name="size" form="">
           <option value="0">Select Size</option>
           <option value="800">Small=800</option>
           <option value="1100">Medium=1100</option>
           <option value="1400">Large=1400</option>
+        </select>
+      </div>
+
+      <div class="form-group"> 
+        <label for="crust">Crust</label>
+        <select class="form-control" id="crust" name="crust" form="">
+          <option value="0">Select Crust</option>
+          <option value="300">Stuffed=300</option>
+          <option value="400">crispy=400</option>
+          <option value="300">Gluten-free=300</option>
         </select>
       </div>
 
