--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
       </div>
 
       <div class="form-group"> 
-        <label for="toppings">Crust</label>
+        <label for="toppings">Toppings</label>
         <select class="form-control" id="toppings" name="toppings" form="">
-          <option value="0">Select Crust</option>
-          <option value="300">Sausage=300</option>
-          <option value="400">bacon=400</option>
+          <option value="0">toppings</option>
+          <option value="120">Sausage=120</option>
+          <option value="240">bacon=240</option>
           <option value="300">peparoni=300</option>
           <option value="300">mushroom=300</option>
         </select>
