--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
         <label for="crust">Crust</label>
         <select class="form-control" id="crust" name="crust" form="">
           <option value="0">Select Crust</option>
-          <option value="300">Stuffed=300</option>
-          <option value="400">crispy=400</option>
-          <option value="300">Gluten-free=300</option>
+          <option value=300>Stuffed=300</option>
+          <option value=400>crispy=400</option>
+          <option value=300>Gluten-free=300</option>
         </select>
       </div>
 
@@ -145,10 +145,10 @@
         <label for="toppings">Toppings</label>
         <select class="form-control" id="toppings" name="toppings" form="">
           <option value="0">toppings</option>
-          <option value="120">Sausage=120</option>
-          <option value="240">bacon=240</option>
-          <option value="300">peparoni=300</option>
-          <option value="300">mushroom=300</option>
+          <option value=120>Sausage=120</option>
+          <option value=240>bacon=240</option>
+          <option value=300>peparoni=300</option>
+          <option value=300>mushroom=300</option>
         </select>
       </div>
 
